--- a/Premiere-Pixel/index.html
+++ b/Premiere-Pixel/index.html
@@ -12,13 +12,18 @@
 </head>
 
 <body>
-  <div class="navbar">
-    <img src="/img/logo.svg" alt="LOGO HERE" />
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
-    </div>
+<div class="navbar">
+  <div class="navbar-left">
+    <img src="./img/logo.svg" alt="LOGO HERE" />
+    <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
   </div>
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="index.html">Movies</a>
+    <a href="index.html">TV-Shows</a>
+    <a href="index.html">Anime</a>
+  </div>
+</div>
 
   <div class="banner" id="banner">
     <h1 id="banner-title"></h1>
