--- a/Premiere-Pixel/index.html
+++ b/Premiere-Pixel/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Premiere-Pixel</title>
-  <link rel="icon" type="image/x-icon" href="./img/Favicon.svg">
+  <link rel="icon" type="image/x-icon" href="./img/Favicon.png">
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
